icono de accesibilidad color

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -791,6 +791,17 @@ body.home:not(.editing) {
                                     }
                                 }
                             }
+                            #local-accessibility-buttoncontainer {
+                                button.btn-primary {
+                                    background-image: none;
+                                    background-color: $grey3;
+                                    &:hover {
+                                        background-color: $grey2;
+                                        outline: none;
+                                        box-shadow: none;
+                                    }
+                                }
+                            }
                         }
                         .activity-navigation {
                             border-top: 1px solid $grey2;
