base de datos específica

--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -1589,7 +1589,15 @@ body:not(.home) {
                     }
                 }
                 .defaulttemplate-listentry {
-                    .row.h-100 {}
+                    .row.my-6 {
+                        .col {
+                            .row.h-100 {
+                                .col-4.col-md-6.text-right.align-self-center.data-timeinfo {
+                                    color: $grey3;
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -1618,13 +1626,89 @@ body:not(.home) {
             outline: none !important;
         }
     }
+    .btn-secondary {
+        background-color: white !important;
+        color: $primary !important;
+        background-image: none;
+        padding: 0.5rem 1rem;
+        border-radius: 500px;
+        border: 1px solid $grey2;
+        height: initial;
+        &:hover {
+            background-color: $grey2 !important;
+            color: $primary;
+            outline: none;
+            box-shadow: none !important;
+        }
+        &:focus {
+            box-shadow: none !important;
+            outline: none !important;
+        }
+    }
 }
 
 .defaulttemplate-single-body,
 .defaulttemplate-list-body,
 #defaulttemplate-addentry {
+    color: $primary;
     .font-weight-bold {
-        color: $primary;
+        color: $primary !important;
         font-weight: 500 !important;
+    }
+}
+
+.cmid-2974749 {
+    #data-listview-content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 16px;
+        font-size: $fs-base;
+        .defaulttemplate-listentry {
+            background-color: $grey1;
+            border: none;
+            margin-bottom: 0 !important;
+            margin-top: 0 !important;
+            .row.my-6 {
+                margin: 0 !important;
+                flex-wrap: initial;
+                .col-auto {
+                    padding: 0;
+                }
+                .col {
+                    padding: 0;
+                    .row.h-100 {
+                        margin-left: initial;
+                        align-items: center;
+                        .col-3 {
+                            display: block;
+                            flex: initial;
+                            max-width: initial;
+                        }
+                        .col-4 {
+                            width: initial;
+                        }
+                    }
+                }
+            }
+            .defaulttemplate-list-body {
+                margin-top: initial;
+                //color: $primary;
+                .row.my-3 {
+                    display: block;
+                    border-bottom: none;
+                    margin-right: initial;
+                    margin-left: initial;
+                    .col-4.col-lg-3 {
+                        max-width: initial;
+                        padding: 0;
+                        font-weight: 600 !important;
+                    }
+                    .col-8.col-lg-9.ml-n3 {
+                        border-left: none;
+                        max-width: initial;
+                    }
+                }
+            }
+        }
     }
 }
