--- a/public/campus/posgrados/base/styles/general.scss
+++ b/public/campus/posgrados/base/styles/general.scss
@@ -757,6 +757,14 @@ body.home:not(.editing) {
                                                                     color: $primary;
                                                                 }
                                                             }
+                                                            .banner {
+                                                                background-color: $secondary;
+                                                                margin-left: 0 !important;
+                                                                margin-right: 0 !important;
+                                                                padding: 2.5rem;
+                                                                line-height: 1.4;
+                                                                margin-bottom: 2.4rem !important;
+                                                            }
                                                         }
                                                     }
                                                 }
@@ -997,69 +1005,68 @@ body:not(.home) {
                                             .card-body {
                                                 padding: 0;
                                             }
-                                            .botonera {
-                                                margin-top: 5rem;
-                                                .btn-hero {
+                                        }
+                                        .botonera {
+                                            .btn-hero {
+                                                position: relative;
+                                                overflow: hidden; // Evita que el efecto se desborde
+                                                border: 1px solid $grey2;
+                                                border-radius: 500px;
+                                                padding: 10px 20px 10px 50px;
+                                                text-decoration: none !important;
+                                                color: $primary !important;
+                                                font-weight: 400;
+                                                display: inline-block;
+                                                margin-right: 20px;
+                                                margin-bottom: 20px;
+                                                transition: border-color 0.3s ease-out, color 0.3s ease-out;
+                                                span {
                                                     position: relative;
-                                                    overflow: hidden; // Evita que el efecto se desborde
-                                                    border: 1px solid $grey2;
-                                                    border-radius: 500px;
-                                                    padding: 10px 20px 10px 50px;
-                                                    text-decoration: none !important;
-                                                    color: $primary !important;
-                                                    font-weight: 400;
-                                                    display: inline-block;
-                                                    margin-right: 20px;
-                                                    margin-bottom: 20px;
-                                                    transition: border-color 0.3s ease-out, color 0.3s ease-out;
-                                                    span {
-                                                        position: relative;
-                                                        z-index: 2; // Mantiene el texto por encima del círculo
-                                                        &:hover {
-                                                            color: $primary;
-                                                        }
-                                                    }
-                                                    &:after {
-                                                        content: "";
-                                                        position: absolute;
-                                                        top: 50%;
-                                                        left: 20px; // Ajustar según el diseño
-                                                        width: 20px; // Tamaño del icono
-                                                        height: 20px;
-                                                        background-size: contain;
-                                                        background-repeat: no-repeat;
-                                                        transform: translateY(-50%);
-                                                        z-index: 2; // Se mantiene por encima del círculo
-                                                    }
-                                                    &:before {
-                                                        content: "";
-                                                        position: absolute;
-                                                        top: 50%;
-                                                        left: 50%;
-                                                        width: 10px;
-                                                        height: 10px;
-                                                        background-color: $secondary;
-                                                        border-radius: 50%;
-                                                        transform: translate(-50%, -50%) scale(0);
-                                                        transition: transform 0.4s ease-out;
-                                                        z-index: 1;
-                                                    }
-                                                    &:hover:before {
-                                                        transform: translate(-50%, -50%) scale(30); // Hace crecer el círculo
-                                                    }
+                                                    z-index: 2; // Mantiene el texto por encima del círculo
                                                     &:hover {
-                                                        border-color: $secondary;
+                                                        color: $primary;
                                                     }
                                                 }
-                                                .btn-vermas:after {
-                                                    background-image: url(../../../base/img/icon_plus.svg);
+                                                &:after {
+                                                    content: "";
+                                                    position: absolute;
+                                                    top: 50%;
+                                                    left: 20px; // Ajustar según el diseño
+                                                    width: 20px; // Tamaño del icono
+                                                    height: 20px;
+                                                    background-size: contain;
+                                                    background-repeat: no-repeat;
+                                                    transform: translateY(-50%);
+                                                    z-index: 2; // Se mantiene por encima del círculo
                                                 }
-                                                .btn-ed:after {
-                                                    background-image: url(../../../base/img/icon_chat.svg);
+                                                &:before {
+                                                    content: "";
+                                                    position: absolute;
+                                                    top: 50%;
+                                                    left: 50%;
+                                                    width: 10px;
+                                                    height: 10px;
+                                                    background-color: $secondary;
+                                                    border-radius: 50%;
+                                                    transform: translate(-50%, -50%) scale(0);
+                                                    transition: transform 0.4s ease-out;
+                                                    z-index: 1;
                                                 }
-                                                .btn-wp:after {
-                                                    background-image: url(../../../base/img/icon-wp.svg);
+                                                &:hover:before {
+                                                    transform: translate(-50%, -50%) scale(30); // Hace crecer el círculo
                                                 }
+                                                &:hover {
+                                                    border-color: $secondary;
+                                                }
+                                            }
+                                            .btn-vermas:after {
+                                                background-image: url(../../../base/img/icon_plus.svg);
+                                            }
+                                            .btn-ed:after {
+                                                background-image: url(../../../base/img/icon_chat.svg);
+                                            }
+                                            .btn-wp:after {
+                                                background-image: url(../../../base/img/wp-icon.svg);
                                             }
                                         }
                                         .pent-sesion {
